Add angles and turning sensitivities to turning functions

--- a/nbproject/Makefile-genesis.properties
+++ b/nbproject/Makefile-genesis.properties
@@ -1,14 +1,14 @@
 #
-#Tue Mar 08 11:13:50 GMT 2022
+#Tue Mar 08 19:31:14 GMT 2022
 default.languagetoolchain.version=2.35
 default.Pack.dfplocation=C\:\\Program Files\\Microchip\\MPLABX\\v6.00\\packs\\Microchip\\PIC18F-K_DFP\\1.5.114
 conf.ids=default
 default.languagetoolchain.dir=C\:\\Program Files\\Microchip\\xc8\\v2.35\\bin
-host.id=38hm-04kc-fk
+host.id=1707-dsfu-bg
 configurations-xml=17aa7ddd41fc656ed8029f79c765ab1f
 com-microchip-mplab-nbide-embedded-makeproject-MakeProject.md5=6e02ca5e9f5042ffd365b42ab82d3a9b
 user-defined-mime-resolver-xml=none
 default.com-microchip-mplab-nbide-toolchain-xc8-XC8LanguageToolchain.md5=ab1e0737b447a24f7366e9fd8fe5a2f0
-proj.dir=C\:\\Users\\Kangan Chen\\MPLABXProjects\\final-project-kangan-yuhai.X
+proj.dir=C\:\\Users\\jinyu\\MPLABXProjects\\final-project-kangan-yuhai.X
 default.com-microchip-mplab-mdbcore-pk4hybrid-Pk4HybridTooImpl.md5=0043dd6df3b134af5caf293d55169d73
 host.platform=windows
